# yamldb

./: .gitignore  CBDD1.cbp  CBDD1.depend  CBDD1.layout  CBDD1_GTK.cbp  CBDD1_GTK.depend  CMakeLists.txt  README.md  TODO.md  cbdd.exe.stackdump  main.c  metadata.yml  table_1.yml  test.yml
documentation/: Conventions de codage.docx  YAML_structure_new_version.md  example.yaml  parser.md  preparation_a_la_production.docx  sql.md  types.md  yaml.md  ~$eparation_a_la_production.docx
resources/: Base de test.yml  Base_3.yml  Base_de_test - Copie.yml  Base_de_test.yml  TestVincent.yml  base1.yml  baseTestAlexis.yml  base_2.yml  base_alexis.yml  parser_test_maps.yaml  parser_test_mix.yaml  test_Vincent.yml  test_bug.yml
resources/Base_de_test/: cars.yml  test1.yml
resources/Base_de_test - Copie/: members.yml
resources/base1/cities/: data.yml  metadata.yml
resources/base1/customers/: data.yml  data.yml~Stashed changes  metadata.yml
resources/base1/orderDetails/: data.yml  data.yml~Stashed changes  metadata.yml  metadata.yml~Stashed changes
resources/base1/orders/: data.yml  metadata.yml
resources/base1/products/: data.yml~Stashed changes  metadata.yml  metadata.yml~Stashed changes
resources/base_2/TABLE8HSFLKGJHSDLGKJHDSFLGJHSDF/: metadata.yml
resources/base_2/bonsoir/: metadata.yml
resources/base_2/bonsoir_a_tous/: metadata.yml
resources/base_2/dernier_test/: metadata.yml
resources/base_2/gaetane/: metadata.yml
resources/base_2/prout/: metadata.yml
resources/base_2/table11235/: metadata.yml
resources/base_2/table12/: metadata.yml
resources/base_2/test/: metadata.yml
resources/base_alexis/: table_1.yml  table_1_alexis.yml  table_2_alexis.yml
resources/data/: base1.yml  bases.yml  tmp.yml
resources/data/base1/base1/: table1.yml
resources/data/base1/cities/: data.yml
resources/data/base1/customers/: metadata.yml
resources/data/base1/orderDetails/: metadata.yml
resources/data/base1/orders/: data.yml
resources/data/base1/products/: data.yml
resources/data/base1/table1/: data.yml  metadata.yml
resources/data/base1/table2/: data.yml  metadata.yml
resources/data/bases/base1/: tables.yml
resources/data/bases/base1/table1/: data.yml  metadata.yml
resources/tests/parser/: bdd.yml  free.yml  maps.yml  mix.yml  sequences.yml
src/: main.c
src/code/: db_manager.c  db_manipulation.c  directory_functions.c  file_manager.c  general.c  main.c  sqlMain.c  string_array_functions.c  table_manager.c  table_manipulation.c
src/code/gui/: sql_module.c  table_module.c  window_manager.c
src/code/sql/: conditions.c  delete.c  insert.c  join.c  operators.c  order.c  parser.c  query.c  select.c  update.c  utils.c
src/code/utils/: hashmap.c  type.c
src/code/yaml/: api.c  parser.c
src/code/yaml/api/: children.c  data.c  db.c  free.c  output.c  parse.c  type.c
src/code/yaml/utils/: parser.c
src/gui/: gui.c  gui.h
src/header/: db_manager.h  db_manipulation.h  directory_functions.h  file_manager.h  general.h  string_array_functions.h  table_manager.h  table_manipulation.h
src/header/gui/: result_module.h  sql_module.h  table_module.h  window_manager.h
src/header/sql/: conditions.h  delete.h  insert.h  join.h  operators.h  order.h  parser.h  query.h  select.h  structs.h  update.h  utils.h
src/header/utils/: hashmap.h  type.h
src/header/yaml/: api.h  node.h  parser.h
src/header/yaml/api/: children.h  data.h  db.h  free.h  output.h  parse.h  type.h
src/header/yaml/utils/: parser.h
src/ui/: ui.h
src/yaml/: parser.c
tests/: main.c  minunit.h  utils.c
tests/api/: all.c  children.c
tests/parser/: all.c  end2end.c  values.c
tests/src/code/api/: allApi.c  children.c  data.c  free.c  output.c  type.c
tests/src/code/parser/: allParser.c  end2end.c
tests/src/code/utils/: string.c  type.c
tests/src/header/: minunit.h  utils.h
tests/src/header/api/: allApi.h  children.h  data.h  free.h  output.h  type.h
tests/src/header/parser/: allParser.h  end2end.h
tests/src/header/utils/: string.h  type.h
